--- a/jupyter/trustyai/ubi9-python-3.11/test/test_notebook.ipynb
+++ b/jupyter/trustyai/ubi9-python-3.11/test/test_notebook.ipynb
@@ -47,12 +47,12 @@
     "    with open(lock_file, 'r') as file:\n",
     "        data = json.load(file)\n",
     "\n",
-    "    return data    \n",
+    "    return data\n",
     "\n",
     "def get_expected_version(dependency_name: str) -> str:\n",
     "    raw_value = expected_versions.get(dependency_name)\n",
     "    raw_version = re.sub(r'^\\D+', '', raw_value)\n",
-    "    return get_major_minor(raw_version) \n",
+    "    return get_major_minor(raw_version)\n",
     "\n",
     "class TestPythonVersion(unittest.TestCase):\n",
     "    def test_version(self):\n",
@@ -68,6 +68,7 @@
     "        self.assertEqual(actual_major_minor, expected_major_minor, \"incorrect version\")\n",
     "\n",
     "    def test_fairnessmetrics(self):\n",
+    "        # TODO: fetch from the checkout, not from the current main\n",
     "        url_unbiased = \"https://raw.githubusercontent.com/opendatahub-io/notebooks/main/jupyter/trustyai/ubi9-python-3.11/test/income-unbiased.csv\"\n",
     "        nobias = pd.read_csv(url_unbiased, index_col=False)\n",
     "\n",
@@ -85,6 +86,7 @@
     "        print(\"On the test_fairness_metrics test case the statistical_parity_difference score for this dataset is between the threshold [-0.1,0.1], which classifies the model as reasonably fair.\")\n",
     "\n",
     "    def test_datafairness(self):\n",
+    "        # TODO: fetch from the checkout, not from the current main\n",
     "        url_biased = \"https://raw.githubusercontent.com/opendatahub-io/notebooks/main/jupyter/trustyai/ubi9-python-3.11/test/income-biased.csv\"\n",
     "        bias = pd.read_csv(url_biased, index_col=False)\n",
     "\n",
